# actix-web-static-files-examples

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
generate-resources-mapping/: Cargo.toml  build.rs
generate-resources-mapping/src/: main.rs
generate-resources-mapping/tests/: generate_resources_mapping.rs
npm-resource-dir/: Cargo.toml  build.rs
npm-resource-dir/src/: main.rs
npm-resource-dir/static/: index.html
npm-resource-dir/static_packages/: package-lock.json  package.json
npm-resource-dir/tests/: npm_resource_dir.rs
resource-dir/: Cargo.toml  build.rs
resource-dir/src/: main.rs
webpack/: Cargo.toml  build.rs
webpack/src/: main.rs
webpack/web/: package-lock.json  webpack.config.js
webpack/web/src/: index.js
yarn-webpack/: Cargo.toml  build.rs
yarn-webpack/src/: main.rs
yarn-webpack/tests/: yarn_webpack.rs
yarn-webpack/web/: package.json  webpack.config.js
yarn-webpack/web/src/: index.js
