[workspace]

members = [
    "generate-resources-mapping",
    "npm-resource-dir",
    "resource-dir",
    "webpack",
    "yarn-webpack",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Alexander Korolev <alexander.korolev.germany@gmail.com>"]
edition = "2024"

[workspace.dependencies]
actix-web = "4.0"
actix-web-static-files = "4.0"
static-files = "0.2.4"

[workspace.build-dependencies]
static-files = "0.2.4"
