[workspace]

members = [
    "generate-resources-mapping",
    "npm-resource-dir",
    "resource-dir",
    "webpack",
    "yarn-webpack",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Alexander Korolev <alexander.korolev.germany@gmail.com>"]
edition = "2024"
rust-version = "1.85.1"
publish = false

[workspace.dependencies]
actix-web = "4.0"
actix-web-static-files = "4.0"
static-files = "0.2.4"
assert_cmd = "2.0"
predicates = "3.1"
reqwest = { version = "0.12", features = ["blocking"] }

# [patch.crates-io]
# static-files.path = "../../static-files-rs/static-files"