[package]
name = "generate-resources-mapping"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
actix-web.workspace = true
actix-web-static-files.workspace = true
static-files.workspace = true

[build-dependencies]
static-files.workspace = true
