[package]
name = "generate-resources-mapping"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
actix-web = "4"
actix-web-static-files = { version = "4.1", features = ["static-files-03"] }
static-files = "0.3.1"

[dev-dependencies]
reqwest.workspace = true
assert_cmd.workspace = true

[build-dependencies]
static-files = "0.3.1"