[package]
name = "resource-dir"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
actix-web.workspace = true
actix-web-static-files.workspace = true
static-files.workspace = true

[dev-dependencies]
reqwest.workspace = true
assert_cmd.workspace = true

[build-dependencies]
static-files.workspace = true