[package]
name = "webpack"
version = "0.1.0"
authors = ["Alexander Korolev <alexander.korolev.germany@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3"
actix-web-static-files = { version = "3.0", features = [ "change-detection" ] }

[build-dependencies]
actix-web-static-files = { version = "3.0", features = [ "change-detection" ] }